[gd_scene load_steps=2 format=3 uid="uid://brtjq888py8wb"]

[ext_resource type="Script" uid="uid://d1qykvmp5wqlq" path="res://scenes/prefabs/RewardCard.gd" id="1"]

[node name="RewardCard" type="PanelContainer" unique_id=1881240031]
custom_minimum_size = Vector2(100, 150)
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="." unique_id=1539461790]
layout_mode = 2

[node name="TierLabel" type="Label" parent="VBox" unique_id=1984595740]
layout_mode = 2
text = "Tier 1"
horizontal_alignment = 1

[node name="RewardIcon" type="TextureRect" parent="VBox" unique_id=113017959]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="RewardName" type="Label" parent="VBox" unique_id=860756699]
layout_mode = 2
text = "Reward"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ClaimButton" type="Button" parent="VBox" unique_id=2131060672]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Claim"

[node name="LockedLabel" type="Label" parent="VBox" unique_id=1810462660]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "Locked"
horizontal_alignment = 1
